@@ -1,16 +1,38 @@
 package com.codepilot1c.core.edt.dcs;
 
+import java.io.ByteArrayInputStream;
+import java.io.IOException;
+import java.io.InputStream;
+import java.io.StringWriter;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Locale;
 
+import javax.xml.XMLConstants;
+import javax.xml.parsers.DocumentBuilderFactory;
+import javax.xml.parsers.ParserConfigurationException;
+import javax.xml.transform.OutputKeys;
+import javax.xml.transform.TransformerException;
+import javax.xml.transform.TransformerFactory;
+import javax.xml.transform.dom.DOMSource;
+import javax.xml.transform.stream.StreamResult;
+
+import org.eclipse.core.resources.IContainer;
+import org.eclipse.core.resources.IFile;
 import org.eclipse.core.resources.IProject;
+import org.eclipse.core.resources.IResource;
+import org.eclipse.core.runtime.CoreException;
 import org.eclipse.emf.ecore.EObject;
 import org.eclipse.emf.ecore.util.EcoreUtil;
+import org.w3c.dom.Document;
+import org.w3c.dom.Element;
+import org.w3c.dom.Node;
+import org.xml.sax.SAXException;
 
 import com._1c.g5.v8.bm.core.IBmObject;
+import com._1c.g5.v8.bm.core.IBmNamespace;
 import com._1c.g5.v8.bm.core.IBmPlatformTransaction;
 import com._1c.g5.v8.dt.core.platform.IExternalObjectProject;
 import com._1c.g5.v8.dt.dcs.model.schema.DataCompositionSchema;
@@ -33,13 +55,23 @@ import com._1c.g5.v8.dt.metadata.mdclass.TemplateType;
 import com.codepilot1c.core.edt.metadata.EdtMetadataGateway;
 import com.codepilot1c.core.edt.metadata.MetadataOperationCode;
 import com.codepilot1c.core.edt.metadata.MetadataOperationException;
+import com.codepilot1c.core.edt.metadata.MetadataProjectReadinessChecker;
 
 /**
  * DCS projections and mutations over EDT metadata model.
  */
 public class EdtDcsService {
 
+    private static final String DCS_SCHEMA_NS = "http://g5.1c.ru/v8/dt/data-composition-system/schema"; //$NON-NLS-1$
+    private static final String XSI_NS = XMLConstants.W3C_XML_SCHEMA_INSTANCE_NS_URI;
+    private static final String TEMPLATE_DCS_FILE = "Template.dcs"; //$NON-NLS-1$
+    private static final String EMPTY_DCS_XML = """
+            <?xml version="1.0" encoding="UTF-8"?>
+            <DataCompositionSchema xmlns="http://g5.1c.ru/v8/dt/data-composition-system/schema" xmlns:schema="http://g5.1c.ru/v8/dt/data-composition-system/schema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"/>
+            """; //$NON-NLS-1$
+
     private final EdtMetadataGateway gateway;
+    private final MetadataProjectReadinessChecker readinessChecker;
 
     public EdtDcsService() {
         this(new EdtMetadataGateway());
@@ -47,14 +79,17 @@ public class EdtDcsService {
 
     EdtDcsService(EdtMetadataGateway gateway) {
         this.gateway = gateway;
+        this.readinessChecker = new MetadataProjectReadinessChecker(gateway);
     }
 
     public DcsSummaryResult getSummary(DcsGetSummaryRequest request) {
         request.validate();
         gateway.ensureValidationRuntimeAvailable();
+        IProject project = resolveProject(request.normalizedProjectName());
+        readinessChecker.ensureReady(project);
 
         MdObject owner = resolveOwner(request.normalizedProjectName(), request.normalizedOwnerFqn());
-        SchemaResolution schemaResolution = resolveSchema(owner);
+        SchemaResolution schemaResolution = resolveSchema(project, owner);
         DataCompositionSchema schema = schemaResolution.schema();
         int templateCount = countDcsTemplates(owner);
 
@@ -62,23 +97,25 @@ public class EdtDcsService {
                 request.normalizedProjectName(),
                 request.normalizedOwnerFqn(),
                 owner.eClass().getName(),
-                schema != null,
+                schemaResolution.schemaPresent(),
                 schemaResolution.source(),
-                schema != null ? schema.getDataSets().size() : 0,
-                schema != null ? schema.getParameters().size() : 0,
-                schema != null ? schema.getCalculatedFields().size() : 0,
-                schema != null ? schema.getSettingsVariants().size() : 0,
+                schemaResolution.dataSetsCount(),
+                schemaResolution.parametersCount(),
+                schemaResolution.calculatedFieldsCount(),
+                schema != null ? schema.getSettingsVariants().size() : schemaResolution.settingsVariantsCount(),
                 templateCount);
     }
 
     public DcsListNodesResult listNodes(DcsListNodesRequest request) {
         request.validate();
         gateway.ensureValidationRuntimeAvailable();
+        IProject project = resolveProject(request.normalizedProjectName());
+        readinessChecker.ensureReady(project);
 
         MdObject owner = resolveOwner(request.normalizedProjectName(), request.normalizedOwnerFqn());
-        SchemaResolution schemaResolution = resolveSchema(owner);
+        SchemaResolution schemaResolution = resolveSchema(project, owner);
         DataCompositionSchema schema = schemaResolution.schema();
-        if (schema == null) {
+        if (!schemaResolution.schemaPresent()) {
             throw new MetadataOperationException(
                     MetadataOperationCode.DCS_SCHEMA_NOT_FOUND,
                     "DCS schema is not configured for owner: " + request.normalizedOwnerFqn(),
@@ -88,6 +125,10 @@ public class EdtDcsService {
         String nodeKind = request.normalizedNodeKind();
         String nameFilter = request.normalizedNameContains();
         List<DcsNodeItem> all = new ArrayList<>();
+        if (schema == null && schemaResolution.externalSchema() != null) {
+            all.addAll(schemaResolution.externalSchema().nodes(nodeKind));
+            return pageNodes(request, nodeKind, nameFilter, all);
+        }
         if ("all".equals(nodeKind) || "dataset".equals(nodeKind)) { //$NON-NLS-1$ //$NON-NLS-2$
             for (DataSet dataSet : schema.getDataSets()) {
                 if (dataSet == null) {
@@ -132,6 +173,15 @@ public class EdtDcsService {
             }
         }
 
+        return pageNodes(request, nodeKind, nameFilter, all);
+    }
+
+    private DcsListNodesResult pageNodes(
+            DcsListNodesRequest request,
+            String nodeKind,
+            String nameFilter,
+            List<DcsNodeItem> all
+    ) {
         if (nameFilter != null) {
             all = all.stream()
                     .filter(item -> normalize(item.name()).contains(nameFilter))
@@ -165,11 +215,31 @@ public class EdtDcsService {
         gateway.ensureMutationRuntimeAvailable();
 
         IProject project = resolveProject(request.normalizedProjectName());
+        readinessChecker.ensureReady(project);
         Configuration configuration = gateway.getConfigurationProvider().getConfiguration(project);
+        MdObject ownerForPath = resolveOwner(project, configuration, request.normalizedOwnerFqn());
+        SchemaResolution existingBefore = resolveSchema(project, ownerForPath);
         Holder<DcsCreateMainSchemaResult> holder = new Holder<>();
+        if (existingBefore.schemaPresent() && !request.shouldForceReplace()) {
+            OwnerTemplates existingTemplates = resolveOwnerTemplates(ownerForPath);
+            holder.value = new DcsCreateMainSchemaResult(
+                    request.normalizedProjectName(),
+                    request.normalizedOwnerFqn(),
+                    ownerForPath.eClass().getName(),
+                    existingBefore.templateName() != null
+                            ? existingBefore.templateName()
+                            : firstDcsTemplateName(existingTemplates),
+                    false,
+                    false,
+                    false,
+                    existingBefore.source());
+            return holder.value;
+        }
+
         executeWrite(project, transaction -> {
             MdObject owner = resolveOwnerInTransaction(
                     transaction,
+                    project,
                     configuration,
                     request.normalizedOwnerFqn());
             OwnerTemplates templates = resolveOwnerTemplates(owner);
@@ -180,26 +250,20 @@ public class EdtDcsService {
                         false); //$NON-NLS-1$
             }
 
-            SchemaResolution existing = resolveSchema(owner);
-            if (existing.schema() != null && !request.shouldForceReplace()) {
-                holder.value = new DcsCreateMainSchemaResult(
-                        request.normalizedProjectName(),
-                        request.normalizedOwnerFqn(),
-                        owner.eClass().getName(),
-                        findTemplateName(existing.schema(), templates.templates()),
-                        false,
-                        false,
-                        false,
-                        existing.source());
-                return null;
+            Template template = findDcsTemplateByName(templates.templates(), request.effectiveTemplateName());
+            boolean templateCreated = false;
+            if (template == null && request.shouldForceReplace()) {
+                template = firstDcsTemplate(templates.templates());
             }
-
-            DataCompositionSchema schema = DcsFactory.eINSTANCE.createDataCompositionSchema();
-            Template template = MdClassFactory.eINSTANCE.createTemplate();
-            template.setName(request.effectiveTemplateName());
-            template.setTemplateType(TemplateType.DATA_COMPOSITION_SCHEMA);
-            template.setTemplate(schema);
-            templates.templates().add(template);
+            if (template == null) {
+                template = MdClassFactory.eINSTANCE.createTemplate();
+                template.setName(request.effectiveTemplateName());
+                template.setTemplateType(TemplateType.DATA_COMPOSITION_SCHEMA);
+                templates.templates().add(template);
+                templateCreated = true;
+            } else if (template.getTemplateType() != TemplateType.DATA_COMPOSITION_SCHEMA) {
+                template.setTemplateType(TemplateType.DATA_COMPOSITION_SCHEMA);
+            }
 
             boolean mainBindingUpdated = false;
             if (owner instanceof Report report) {
@@ -216,7 +280,7 @@ public class EdtDcsService {
                     owner.eClass().getName(),
                     safe(template.getName()),
                     true,
-                    true,
+                    templateCreated,
                     mainBindingUpdated,
                     mainBindingUpdated ? "main" : "templates"); //$NON-NLS-1$ //$NON-NLS-2$
             return null;
@@ -228,6 +292,7 @@ public class EdtDcsService {
                     "Failed to create DCS schema",
                     false); //$NON-NLS-1$
         }
+        ensureExternalSchemaFile(project, ownerForPath, holder.value.templateName(), request.shouldForceReplace());
         return holder.value;
     }
 
@@ -236,14 +301,22 @@ public class EdtDcsService {
         gateway.ensureMutationRuntimeAvailable();
 
         IProject project = resolveProject(request.normalizedProjectName());
+        readinessChecker.ensureReady(project);
         Configuration configuration = gateway.getConfigurationProvider().getConfiguration(project);
+        MdObject readOwner = resolveOwner(project, configuration, request.normalizedOwnerFqn());
+        SchemaResolution readResolution = resolveSchema(project, readOwner);
+        if (readResolution.schema() == null && readResolution.externalSchema() != null) {
+            return upsertExternalQueryDataset(request, readResolution.externalSchema());
+        }
+
         Holder<DcsUpsertQueryDatasetResult> holder = new Holder<>();
         executeWrite(project, transaction -> {
             MdObject owner = resolveOwnerInTransaction(
                     transaction,
+                    project,
                     configuration,
                     request.normalizedOwnerFqn());
-            DataCompositionSchema schema = requireSchema(owner, request.normalizedOwnerFqn());
+            DataCompositionSchema schema = requireSchema(project, owner, request.normalizedOwnerFqn());
 
             DataCompositionSchemaDataSetQuery dataset = findQueryDataset(schema, request.normalizedDatasetName());
             boolean created = false;
@@ -292,14 +365,22 @@ public class EdtDcsService {
         gateway.ensureMutationRuntimeAvailable();
 
         IProject project = resolveProject(request.normalizedProjectName());
+        readinessChecker.ensureReady(project);
         Configuration configuration = gateway.getConfigurationProvider().getConfiguration(project);
+        MdObject readOwner = resolveOwner(project, configuration, request.normalizedOwnerFqn());
+        SchemaResolution readResolution = resolveSchema(project, readOwner);
+        if (readResolution.schema() == null && readResolution.externalSchema() != null) {
+            return upsertExternalParameter(request, readResolution.externalSchema());
+        }
+
         Holder<DcsUpsertParameterResult> holder = new Holder<>();
         executeWrite(project, transaction -> {
             MdObject owner = resolveOwnerInTransaction(
                     transaction,
+                    project,
                     configuration,
                     request.normalizedOwnerFqn());
-            DataCompositionSchema schema = requireSchema(owner, request.normalizedOwnerFqn());
+            DataCompositionSchema schema = requireSchema(project, owner, request.normalizedOwnerFqn());
 
             DataCompositionSchemaParameter parameter = findParameter(schema, request.normalizedParameterName());
             boolean created = false;
@@ -352,14 +433,22 @@ public class EdtDcsService {
         gateway.ensureMutationRuntimeAvailable();
 
         IProject project = resolveProject(request.normalizedProjectName());
+        readinessChecker.ensureReady(project);
         Configuration configuration = gateway.getConfigurationProvider().getConfiguration(project);
+        MdObject readOwner = resolveOwner(project, configuration, request.normalizedOwnerFqn());
+        SchemaResolution readResolution = resolveSchema(project, readOwner);
+        if (readResolution.schema() == null && readResolution.externalSchema() != null) {
+            return upsertExternalCalculatedField(request, readResolution.externalSchema());
+        }
+
         Holder<DcsUpsertCalculatedFieldResult> holder = new Holder<>();
         executeWrite(project, transaction -> {
             MdObject owner = resolveOwnerInTransaction(
                     transaction,
+                    project,
                     configuration,
                     request.normalizedOwnerFqn());
-            DataCompositionSchema schema = requireSchema(owner, request.normalizedOwnerFqn());
+            DataCompositionSchema schema = requireSchema(project, owner, request.normalizedOwnerFqn());
 
             DataCompositionSchemaCalculatedField field = findCalculatedField(schema, request.normalizedDataPath());
             boolean created = false;
@@ -408,25 +497,27 @@ public class EdtDcsService {
 
     private MdObject resolveOwnerInTransaction(
             IBmPlatformTransaction transaction,
+            IProject project,
             Configuration configuration,
             String ownerFqn
     ) {
-        // First try to resolve within the transaction context (reliable for new objects)
-        if (configuration != null) {
-            try {
-                Configuration txConfiguration = transaction.toTransactionObject(configuration);
-                if (txConfiguration != null) {
-                    MdObject txOwner = findInConfiguration(txConfiguration, ownerFqn);
-                    if (txOwner != null) {
-                        return txOwner;
-                    }
-                }
-            } catch (RuntimeException e) {
-                // Fall through to non-transaction resolution
-            }
+        MdObject txOwnerFromConfiguration = resolveOwnerFromTransactionConfiguration(
+                transaction, configuration, ownerFqn);
+        if (txOwnerFromConfiguration != null) {
+            return txOwnerFromConfiguration;
         }
-        // Fallback: resolve outside transaction and map
-        MdObject owner = resolveOwner(configuration, ownerFqn);
+
+        try {
+            IBmNamespace namespace = gateway.getBmModelManager().getBmNamespace(project);
+            MdObject txOwnerByFqn = castMdObject(transaction.getTopObjectByFqn(namespace, ownerFqn));
+            if (txOwnerByFqn != null) {
+                return txOwnerByFqn;
+            }
+        } catch (RuntimeException e) {
+            // Fall through to outside-transaction resolution.
+        }
+
+        MdObject owner = resolveOwner(project, configuration, ownerFqn);
         MdObject txOwner = castMdObject(transaction.toTransactionObject(owner));
         if (txOwner == null) {
             txOwner = resolveOwnerByUri(transaction, owner);
@@ -441,6 +532,25 @@ public class EdtDcsService {
                     false);
         }
         return txOwner != null ? txOwner : owner;
+    }
+
+    private MdObject resolveOwnerFromTransactionConfiguration(
+            IBmPlatformTransaction transaction,
+            Configuration configuration,
+            String ownerFqn
+    ) {
+        if (configuration == null) {
+            return null;
+        }
+        try {
+            EObject txConfiguration = transaction.toTransactionObject(configuration);
+            if (txConfiguration instanceof Configuration configurationInTransaction) {
+                return findInConfiguration(configurationInTransaction, ownerFqn);
+            }
+        } catch (RuntimeException e) {
+            // Fall through to alternative transaction lookup.
+        }
+        return null;
     }
 
     private MdObject resolveOwnerByUri(IBmPlatformTransaction transaction, MdObject owner) {
@@ -463,23 +573,6 @@ public class EdtDcsService {
         IProject project = resolveProject(projectName);
         Configuration configuration = gateway.getConfigurationProvider().getConfiguration(project);
         return resolveOwner(project, configuration, ownerFqn);
-    }
-
-    private MdObject resolveOwner(Configuration configuration, String ownerFqn) {
-        if (configuration == null) {
-            throw new MetadataOperationException(
-                    MetadataOperationCode.METADATA_NOT_FOUND,
-                    "Configuration is unavailable",
-                    false); //$NON-NLS-1$
-        }
-        MdObject object = findInConfiguration(configuration, ownerFqn);
-        if (object == null) {
-            throw new MetadataOperationException(
-                    MetadataOperationCode.METADATA_NOT_FOUND,
-                    "Owner object not found: " + ownerFqn,
-                    false); //$NON-NLS-1$
-        }
-        return object;
     }
 
     private MdObject resolveOwner(IProject project, Configuration configuration, String ownerFqn) {
@@ -534,47 +627,80 @@ public class EdtDcsService {
     }
 
     private MdObject findInConfiguration(Configuration configuration, String ownerFqn) {
-        String[] parts = ownerFqn != null ? ownerFqn.split("\\.") : new String[0]; //$NON-NLS-1$
+        return findTopLevelOwner(configuration, ownerFqn);
+    }
+
+    private MdObject findTopLevelOwner(Configuration configuration, String ownerFqn) {
+        if (configuration == null || ownerFqn == null || ownerFqn.isBlank()) {
+            return null;
+        }
+        String[] parts = ownerFqn.split("\\."); //$NON-NLS-1$
         if (parts.length < 2) {
             return null;
         }
-        String type = parts[0].trim().toLowerCase(Locale.ROOT);
-        String name = parts[1].trim();
-        List<? extends MdObject> topLevel = switch (type) {
+        String type = normalizeToken(parts[0]);
+        String name = parts[1];
+        List<? extends MdObject> candidates = switch (type) {
             case "report", "отчет", "отчёт" -> configuration.getReports(); //$NON-NLS-1$ //$NON-NLS-2$ //$NON-NLS-3$
             case "dataprocessor", "обработка" -> configuration.getDataProcessors(); //$NON-NLS-1$ //$NON-NLS-2$
-            default -> Collections.emptyList();
+            default -> List.of();
         };
-        for (MdObject object : topLevel) {
-            if (name.equalsIgnoreCase(object.getName())) {
-                return object;
+        for (MdObject candidate : candidates) {
+            if (candidate != null && name.equalsIgnoreCase(candidate.getName())) {
+                return candidate;
             }
         }
         return null;
     }
 
-    private SchemaResolution resolveSchema(MdObject owner) {
+    private SchemaResolution resolveSchema(IProject project, MdObject owner) {
         if (owner instanceof Report report) {
-            DataCompositionSchema schema = extractSchema(report.getMainDataCompositionSchema());
-            if (schema != null) {
-                return new SchemaResolution(schema, "main"); //$NON-NLS-1$
+            Template mainTemplate = asTemplate(report.getMainDataCompositionSchema());
+            ExternalDcsSchema external = readExternalSchema(project, owner, mainTemplate);
+            if (external != null) {
+                return new SchemaResolution(null, "main", external.templateName(), external); //$NON-NLS-1$
             }
-            return new SchemaResolution(findInTemplates(report.getTemplates()), "templates"); //$NON-NLS-1$
+            DataCompositionSchema schema = extractSchema(mainTemplate);
+            if (schema != null) {
+                return new SchemaResolution(schema, "main", safe(mainTemplate.getName()), null); //$NON-NLS-1$
+            }
+            return resolveFromTemplateList(project, owner, report.getTemplates());
         }
         if (owner instanceof ExternalReport report) {
-            DataCompositionSchema schema = extractSchema(report.getMainDataCompositionSchema());
-            if (schema != null) {
-                return new SchemaResolution(schema, "main"); //$NON-NLS-1$
+            Template mainTemplate = asTemplate(report.getMainDataCompositionSchema());
+            ExternalDcsSchema external = readExternalSchema(project, owner, mainTemplate);
+            if (external != null) {
+                return new SchemaResolution(null, "main", external.templateName(), external); //$NON-NLS-1$
             }
-            return new SchemaResolution(findInTemplates(report.getTemplates()), "templates"); //$NON-NLS-1$
+            DataCompositionSchema schema = extractSchema(mainTemplate);
+            if (schema != null) {
+                return new SchemaResolution(schema, "main", safe(mainTemplate.getName()), null); //$NON-NLS-1$
+            }
+            return resolveFromTemplateList(project, owner, report.getTemplates());
         }
         if (owner instanceof DataProcessor dataProcessor) {
-            return new SchemaResolution(findInTemplates(dataProcessor.getTemplates()), "templates"); //$NON-NLS-1$
+            return resolveFromTemplateList(project, owner, dataProcessor.getTemplates());
         }
         if (owner instanceof ExternalDataProcessor dataProcessor) {
-            return new SchemaResolution(findInTemplates(dataProcessor.getTemplates()), "templates"); //$NON-NLS-1$
+            return resolveFromTemplateList(project, owner, dataProcessor.getTemplates());
         }
-        return new SchemaResolution(null, "none"); //$NON-NLS-1$
+        return new SchemaResolution(null, "none", null, null); //$NON-NLS-1$
+    }
+
+    private SchemaResolution resolveFromTemplateList(
+            IProject project,
+            MdObject owner,
+            List<? extends Template> templates
+    ) {
+        ExternalDcsSchema external = findExternalInTemplates(project, owner, templates);
+        if (external != null) {
+            return new SchemaResolution(null, "templates", external.templateName(), external); //$NON-NLS-1$
+        }
+        DataCompositionSchema schema = findInTemplates(templates);
+        if (schema != null) {
+            return new SchemaResolution(schema, "templates", findTemplateName(schema, templates), null); //$NON-NLS-1$
+        }
+        return new SchemaResolution(null, "templates", firstDcsTemplateName(templates), null); //$NON-NLS-1$
     }
 
     private OwnerTemplates resolveOwnerTemplates(MdObject owner) {
@@ -601,15 +727,15 @@ public class EdtDcsService {
     private int countInTemplates(List<? extends Template> templates) {
         int count = 0;
         for (Template template : templates) {
-            if (extractSchema(template) != null) {
+            if (isDcsTemplate(template)) {
                 count++;
             }
         }
         return count;
     }
 
-    private DataCompositionSchema requireSchema(MdObject owner, String ownerFqn) {
-        SchemaResolution resolution = resolveSchema(owner);
+    private DataCompositionSchema requireSchema(IProject project, MdObject owner, String ownerFqn) {
+        SchemaResolution resolution = resolveSchema(project, owner);
         if (resolution.schema() == null) {
             throw new MetadataOperationException(
                     MetadataOperationCode.DCS_SCHEMA_NOT_FOUND,
@@ -619,13 +745,55 @@ public class EdtDcsService {
         return resolution.schema();
     }
 
-    private String findTemplateName(DataCompositionSchema schema, List<Template> templates) {
+    private String findTemplateName(DataCompositionSchema schema, List<? extends Template> templates) {
         for (Template template : templates) {
             if (template != null && template.getTemplate() == schema) {
                 return safe(template.getName());
             }
         }
         return ""; //$NON-NLS-1$
+    }
+
+    private String firstDcsTemplateName(OwnerTemplates templates) {
+        return templates == null ? "" : firstDcsTemplateName(templates.templates()); //$NON-NLS-1$
+    }
+
+    private String firstDcsTemplateName(List<? extends Template> templates) {
+        Template template = firstDcsTemplate(templates);
+        return template == null ? "" : safe(template.getName()); //$NON-NLS-1$
+    }
+
+    private Template firstDcsTemplate(List<? extends Template> templates) {
+        if (templates == null) {
+            return null;
+        }
+        for (Template template : templates) {
+            if (isDcsTemplate(template)) {
+                return template;
+            }
+        }
+        return null;
+    }
+
+    private Template findDcsTemplateByName(List<? extends Template> templates, String name) {
+        if (templates == null) {
+            return null;
+        }
+        String token = normalize(name);
+        for (Template template : templates) {
+            if (isDcsTemplate(template) && normalize(template.getName()).equals(token)) {
+                return template;
+            }
+        }
+        return null;
+    }
+
+    private boolean isDcsTemplate(BasicTemplate template) {
+        return template != null && template.getTemplateType() == TemplateType.DATA_COMPOSITION_SCHEMA;
+    }
+
+    private Template asTemplate(BasicTemplate template) {
+        return template instanceof Template concrete ? concrete : null;
     }
 
     private DataCompositionSchemaDataSetQuery findQueryDataset(DataCompositionSchema schema, String name) {
@@ -660,6 +828,9 @@ public class EdtDcsService {
     }
 
     private DataCompositionSchema findInTemplates(List<? extends Template> templates) {
+        if (templates == null) {
+            return null;
+        }
         for (Template template : templates) {
             DataCompositionSchema schema = extractSchema(template);
             if (schema != null) {
@@ -667,6 +838,345 @@ public class EdtDcsService {
             }
         }
         return null;
+    }
+
+    private ExternalDcsSchema findExternalInTemplates(
+            IProject project,
+            MdObject owner,
+            List<? extends Template> templates
+    ) {
+        if (templates == null) {
+            return null;
+        }
+        for (Template template : templates) {
+            ExternalDcsSchema schema = readExternalSchema(project, owner, template);
+            if (schema != null) {
+                return schema;
+            }
+        }
+        return null;
+    }
+
+    private ExternalDcsSchema readExternalSchema(IProject project, MdObject owner, Template template) {
+        if (project == null || owner == null || !isDcsTemplate(template)) {
+            return null;
+        }
+        IFile file = resolveExternalSchemaFile(project, owner, safe(template.getName()));
+        if (file == null || !file.exists()) {
+            return null;
+        }
+        try {
+            Document document = readDcsDocument(file);
+            Element root = document.getDocumentElement();
+            if (root == null || !"DataCompositionSchema".equals(localName(root))) { //$NON-NLS-1$
+                return null;
+            }
+            return new ExternalDcsSchema(file, safe(template.getName()), nodesFrom(root, "dataSets"), //$NON-NLS-1$
+                    nodesFrom(root, "parameters"), nodesFrom(root, "calculatedFields"), //$NON-NLS-1$ //$NON-NLS-2$
+                    nodesFrom(root, "settingsVariants").size()); //$NON-NLS-1$
+        } catch (MetadataOperationException e) {
+            throw e;
+        } catch (RuntimeException e) {
+            throw new MetadataOperationException(
+                    MetadataOperationCode.EDT_TRANSACTION_FAILED,
+                    "Failed to read external DCS schema: " + file.getProjectRelativePath(), //$NON-NLS-1$
+                    false,
+                    e);
+        }
+    }
+
+    private List<ExternalDcsNode> nodesFrom(Element root, String elementName) {
+        List<ExternalDcsNode> result = new ArrayList<>();
+        for (Node child = root.getFirstChild(); child != null; child = child.getNextSibling()) {
+            if (child instanceof Element element && elementName.equals(localName(element))) {
+                result.add(new ExternalDcsNode(
+                        elementName,
+                        attr(element, "name"), //$NON-NLS-1$
+                        attr(element, "dataPath"), //$NON-NLS-1$
+                        attr(element, "expression"), //$NON-NLS-1$
+                        attr(element, "query"), //$NON-NLS-1$
+                        attr(element, "dataSource"), //$NON-NLS-1$
+                        attr(element, "presentationExpression"), //$NON-NLS-1$
+                        attr(element, "autoFillAvailableFields"), //$NON-NLS-1$
+                        attr(element, "useQueryGroupIfPossible"), //$NON-NLS-1$
+                        attr(element, "availableAsField"), //$NON-NLS-1$
+                        attr(element, "valueListAllowed"), //$NON-NLS-1$
+                        attr(element, "denyIncompleteValues"), //$NON-NLS-1$
+                        attr(element, "useRestriction"), //$NON-NLS-1$
+                        attr(element, "type"))); //$NON-NLS-1$
+            }
+        }
+        return result;
+    }
+
+    private DcsUpsertQueryDatasetResult upsertExternalQueryDataset(
+            DcsUpsertQueryDatasetRequest request,
+            ExternalDcsSchema externalSchema
+    ) {
+        try {
+            Document document = readDcsDocument(externalSchema.file());
+            Element root = document.getDocumentElement();
+            Element dataset = findChildByKey(root, "dataSets", "name", request.normalizedDatasetName()); //$NON-NLS-1$ //$NON-NLS-2$
+            boolean created = false;
+            if (dataset == null) {
+                dataset = document.createElementNS(DCS_SCHEMA_NS, "dataSets"); //$NON-NLS-1$
+                dataset.setAttributeNS(XSI_NS, "xsi:type", "schema:DataCompositionSchemaDataSetQuery"); //$NON-NLS-1$ //$NON-NLS-2$
+                dataset.setAttribute("name", request.normalizedDatasetName()); //$NON-NLS-1$
+                root.appendChild(dataset);
+                created = true;
+            }
+            setOptional(dataset, "query", request.normalizedQuery()); //$NON-NLS-1$
+            setOptional(dataset, "dataSource", request.normalizedDataSource()); //$NON-NLS-1$
+            setOptional(dataset, "autoFillAvailableFields", request.autoFillAvailableFields()); //$NON-NLS-1$
+            setOptional(dataset, "useQueryGroupIfPossible", request.useQueryGroupIfPossible()); //$NON-NLS-1$
+            writeDcsDocument(externalSchema.file(), document);
+            return new DcsUpsertQueryDatasetResult(
+                    request.normalizedProjectName(),
+                    request.normalizedOwnerFqn(),
+                    attr(dataset, "name"), //$NON-NLS-1$
+                    created,
+                    attr(dataset, "query"), //$NON-NLS-1$
+                    attr(dataset, "dataSource"), //$NON-NLS-1$
+                    boolAttr(dataset, "autoFillAvailableFields", true), //$NON-NLS-1$
+                    boolAttr(dataset, "useQueryGroupIfPossible", true)); //$NON-NLS-1$
+        } catch (MetadataOperationException e) {
+            throw e;
+        } catch (RuntimeException e) {
+            throw externalDcsMutationFailed(externalSchema.file(), e);
+        }
+    }
+
+    private DcsUpsertParameterResult upsertExternalParameter(
+            DcsUpsertParameterRequest request,
+            ExternalDcsSchema externalSchema
+    ) {
+        try {
+            Document document = readDcsDocument(externalSchema.file());
+            Element root = document.getDocumentElement();
+            Element parameter = findChildByKey(root, "parameters", "name", request.normalizedParameterName()); //$NON-NLS-1$ //$NON-NLS-2$
+            boolean created = false;
+            if (parameter == null) {
+                parameter = document.createElementNS(DCS_SCHEMA_NS, "parameters"); //$NON-NLS-1$
+                parameter.setAttribute("name", request.normalizedParameterName()); //$NON-NLS-1$
+                root.appendChild(parameter);
+                created = true;
+            }
+            setOptional(parameter, "expression", request.normalizedExpression()); //$NON-NLS-1$
+            setOptional(parameter, "availableAsField", request.availableAsField()); //$NON-NLS-1$
+            setOptional(parameter, "valueListAllowed", request.valueListAllowed()); //$NON-NLS-1$
+            setOptional(parameter, "denyIncompleteValues", request.denyIncompleteValues()); //$NON-NLS-1$
+            setOptional(parameter, "useRestriction", request.useRestriction()); //$NON-NLS-1$
+            writeDcsDocument(externalSchema.file(), document);
+            return new DcsUpsertParameterResult(
+                    request.normalizedProjectName(),
+                    request.normalizedOwnerFqn(),
+                    attr(parameter, "name"), //$NON-NLS-1$
+                    created,
+                    attr(parameter, "expression"), //$NON-NLS-1$
+                    boolAttr(parameter, "availableAsField", true), //$NON-NLS-1$
+                    boolAttr(parameter, "valueListAllowed", false), //$NON-NLS-1$
+                    boolAttr(parameter, "denyIncompleteValues", false), //$NON-NLS-1$
+                    boolAttr(parameter, "useRestriction", false)); //$NON-NLS-1$
+        } catch (MetadataOperationException e) {
+            throw e;
+        } catch (RuntimeException e) {
+            throw externalDcsMutationFailed(externalSchema.file(), e);
+        }
+    }
+
+    private DcsUpsertCalculatedFieldResult upsertExternalCalculatedField(
+            DcsUpsertCalculatedFieldRequest request,
+            ExternalDcsSchema externalSchema
+    ) {
+        try {
+            Document document = readDcsDocument(externalSchema.file());
+            Element root = document.getDocumentElement();
+            Element field = findChildByKey(root, "calculatedFields", "dataPath", request.normalizedDataPath()); //$NON-NLS-1$ //$NON-NLS-2$
+            boolean created = false;
+            if (field == null) {
+                field = document.createElementNS(DCS_SCHEMA_NS, "calculatedFields"); //$NON-NLS-1$
+                field.setAttribute("dataPath", request.normalizedDataPath()); //$NON-NLS-1$
+                root.appendChild(field);
+                created = true;
+            }
+            setOptional(field, "expression", request.normalizedExpression()); //$NON-NLS-1$
+            setOptional(field, "presentationExpression", request.normalizedPresentationExpression()); //$NON-NLS-1$
+            writeDcsDocument(externalSchema.file(), document);
+            return new DcsUpsertCalculatedFieldResult(
+                    request.normalizedProjectName(),
+                    request.normalizedOwnerFqn(),
+                    attr(field, "dataPath"), //$NON-NLS-1$
+                    created,
+                    attr(field, "expression"), //$NON-NLS-1$
+                    attr(field, "presentationExpression")); //$NON-NLS-1$
+        } catch (MetadataOperationException e) {
+            throw e;
+        } catch (RuntimeException e) {
+            throw externalDcsMutationFailed(externalSchema.file(), e);
+        }
+    }
+
+    private MetadataOperationException externalDcsMutationFailed(IFile file, RuntimeException e) {
+        return new MetadataOperationException(
+                MetadataOperationCode.EDT_TRANSACTION_FAILED,
+                "Failed to update external DCS schema: " + file.getProjectRelativePath(), //$NON-NLS-1$
+                false,
+                e);
+    }
+
+    private void ensureExternalSchemaFile(IProject project, MdObject owner, String templateName, boolean forceReplace) {
+        IFile file = resolveExternalSchemaFile(project, owner, templateName);
+        if (file == null) {
+            throw new MetadataOperationException(
+                    MetadataOperationCode.DCS_OWNER_KIND_UNSUPPORTED,
+                    "Cannot resolve external DCS path for owner: " + owner.eClass().getName(), //$NON-NLS-1$
+                    false);
+        }
+        if (file.exists() && !forceReplace) {
+            return;
+        }
+        writeDcsText(file, EMPTY_DCS_XML);
+    }
+
+    private IFile resolveExternalSchemaFile(IProject project, MdObject owner, String templateName) {
+        String folder = topFolderForOwner(owner);
+        if (folder == null || templateName == null || templateName.isBlank()) {
+            return null;
+        }
+        String path = "src/" + folder + "/" + safe(owner.getName()) //$NON-NLS-1$ //$NON-NLS-2$
+                + "/Templates/" + templateName + "/" + TEMPLATE_DCS_FILE; //$NON-NLS-1$ //$NON-NLS-2$
+        return project.getFile(path);
+    }
+
+    private String topFolderForOwner(MdObject owner) {
+        if (owner instanceof Report || owner instanceof ExternalReport) {
+            return "Reports"; //$NON-NLS-1$
+        }
+        if (owner instanceof DataProcessor || owner instanceof ExternalDataProcessor) {
+            return "DataProcessors"; //$NON-NLS-1$
+        }
+        return null;
+    }
+
+    private Document readDcsDocument(IFile file) {
+        try (InputStream input = file.getContents()) {
+            DocumentBuilderFactory factory = newDocumentBuilderFactory();
+            return factory.newDocumentBuilder().parse(input);
+        } catch (IOException | CoreException | ParserConfigurationException | SAXException e) {
+            throw new MetadataOperationException(
+                    MetadataOperationCode.EDT_TRANSACTION_FAILED,
+                    "Failed to parse external DCS schema: " + file.getProjectRelativePath(), //$NON-NLS-1$
+                    false,
+                    e);
+        }
+    }
+
+    private DocumentBuilderFactory newDocumentBuilderFactory() throws ParserConfigurationException {
+        DocumentBuilderFactory factory = DocumentBuilderFactory.newInstance();
+        factory.setNamespaceAware(true);
+        factory.setFeature(XMLConstants.FEATURE_SECURE_PROCESSING, true);
+        return factory;
+    }
+
+    private void writeDcsDocument(IFile file, Document document) {
+        try {
+            Element root = document.getDocumentElement();
+            if (root != null) {
+                root.setAttribute("xmlns:schema", DCS_SCHEMA_NS); //$NON-NLS-1$
+                root.setAttribute("xmlns:xsi", XSI_NS); //$NON-NLS-1$
+            }
+            TransformerFactory factory = TransformerFactory.newInstance();
+            factory.setFeature(XMLConstants.FEATURE_SECURE_PROCESSING, true);
+            var transformer = factory.newTransformer();
+            transformer.setOutputProperty(OutputKeys.ENCODING, StandardCharsets.UTF_8.name());
+            transformer.setOutputProperty(OutputKeys.INDENT, "yes"); //$NON-NLS-1$
+            StringWriter writer = new StringWriter();
+            transformer.transform(new DOMSource(document), new StreamResult(writer));
+            writeDcsText(file, writer.toString());
+        } catch (TransformerException e) {
+            throw new MetadataOperationException(
+                    MetadataOperationCode.EDT_TRANSACTION_FAILED,
+                    "Failed to serialize external DCS schema: " + file.getProjectRelativePath(), //$NON-NLS-1$
+                    false,
+                    e);
+        }
+    }
+
+    private void writeDcsText(IFile file, String content) {
+        try {
+            createParentsIfMissing(file);
+            try (ByteArrayInputStream input = new ByteArrayInputStream(content.getBytes(StandardCharsets.UTF_8))) {
+                if (file.exists()) {
+                    file.setContents(input, IResource.FORCE, null);
+                } else {
+                    file.create(input, IResource.FORCE, null);
+                }
+            }
+            file.refreshLocal(IResource.DEPTH_ZERO, null);
+        } catch (IOException | CoreException e) {
+            throw new MetadataOperationException(
+                    MetadataOperationCode.EDT_TRANSACTION_FAILED,
+                    "Failed to write external DCS schema: " + file.getProjectRelativePath(), //$NON-NLS-1$
+                    false,
+                    e);
+        }
+    }
+
+    private void createParentsIfMissing(IFile file) throws CoreException {
+        IContainer parent = file.getParent();
+        if (parent instanceof org.eclipse.core.resources.IFolder folder && !folder.exists()) {
+            createFolderIfMissing(folder);
+        }
+    }
+
+    private void createFolderIfMissing(org.eclipse.core.resources.IFolder folder) throws CoreException {
+        IContainer parent = folder.getParent();
+        if (parent instanceof org.eclipse.core.resources.IFolder parentFolder && !parentFolder.exists()) {
+            createFolderIfMissing(parentFolder);
+        }
+        if (!folder.exists()) {
+            folder.create(true, true, null);
+        }
+    }
+
+    private Element findChildByKey(Element root, String elementName, String key, String value) {
+        String token = normalize(value);
+        for (Node child = root.getFirstChild(); child != null; child = child.getNextSibling()) {
+            if (child instanceof Element element
+                    && elementName.equals(localName(element))
+                    && normalize(attr(element, key)).equals(token)) {
+                return element;
+            }
+        }
+        return null;
+    }
+
+    private void setOptional(Element element, String name, String value) {
+        if (value != null) {
+            element.setAttribute(name, value);
+        }
+    }
+
+    private void setOptional(Element element, String name, Boolean value) {
+        if (value != null) {
+            element.setAttribute(name, Boolean.toString(value.booleanValue()));
+        }
+    }
+
+    private String attr(Element element, String name) {
+        if ("type".equals(name) && element.hasAttributeNS(XSI_NS, "type")) { //$NON-NLS-1$ //$NON-NLS-2$
+            return element.getAttributeNS(XSI_NS, "type"); //$NON-NLS-1$
+        }
+        return element.hasAttribute(name) ? element.getAttribute(name) : ""; //$NON-NLS-1$
+    }
+
+    private boolean boolAttr(Element element, String name, boolean defaultValue) {
+        return element.hasAttribute(name) ? Boolean.parseBoolean(element.getAttribute(name)) : defaultValue;
+    }
+
+    private String localName(Node node) {
+        String local = node.getLocalName();
+        return local != null ? local : node.getNodeName();
     }
 
     private DataCompositionSchema extractSchema(BasicTemplate template) {
@@ -724,11 +1234,114 @@ public class EdtDcsService {
         return value.trim().toLowerCase(Locale.ROOT);
     }
 
+    private String normalizeToken(String value) {
+        if (value == null) {
+            return ""; //$NON-NLS-1$
+        }
+        return value.trim()
+                .replace("_", "") //$NON-NLS-1$ //$NON-NLS-2$
+                .replace("-", "") //$NON-NLS-1$ //$NON-NLS-2$
+                .replace(" ", "") //$NON-NLS-1$ //$NON-NLS-2$
+                .toLowerCase(Locale.ROOT);
+    }
+
     private boolean isExternalOwner(MdObject owner) {
         return owner instanceof ExternalReport || owner instanceof ExternalDataProcessor;
     }
 
-    private record SchemaResolution(DataCompositionSchema schema, String source) {
+    private record SchemaResolution(
+            DataCompositionSchema schema,
+            String source,
+            String templateName,
+            ExternalDcsSchema externalSchema
+    ) {
+        private boolean schemaPresent() {
+            return schema != null || externalSchema != null;
+        }
+
+        private int dataSetsCount() {
+            return schema != null ? schema.getDataSets().size() : externalSchemaCount(NodeKind.DATASET);
+        }
+
+        private int parametersCount() {
+            return schema != null ? schema.getParameters().size() : externalSchemaCount(NodeKind.PARAMETER);
+        }
+
+        private int calculatedFieldsCount() {
+            return schema != null ? schema.getCalculatedFields().size() : externalSchemaCount(NodeKind.CALCULATED);
+        }
+
+        private int settingsVariantsCount() {
+            return externalSchema == null ? 0 : externalSchema.settingsVariantsCount();
+        }
+
+        private int externalSchemaCount(NodeKind kind) {
+            if (externalSchema == null) {
+                return 0;
+            }
+            return switch (kind) {
+                case DATASET -> externalSchema.dataSets().size();
+                case PARAMETER -> externalSchema.parameters().size();
+                case CALCULATED -> externalSchema.calculatedFields().size();
+            };
+        }
+    }
+
+    private record ExternalDcsSchema(
+            IFile file,
+            String templateName,
+            List<ExternalDcsNode> dataSets,
+            List<ExternalDcsNode> parameters,
+            List<ExternalDcsNode> calculatedFields,
+            int settingsVariantsCount
+    ) {
+        private List<DcsNodeItem> nodes(String nodeKind) {
+            List<DcsNodeItem> result = new ArrayList<>();
+            if ("all".equals(nodeKind) || "dataset".equals(nodeKind)) { //$NON-NLS-1$ //$NON-NLS-2$
+                dataSets.forEach(node -> result.add(node.toNodeItem()));
+            }
+            if ("all".equals(nodeKind) || "parameter".equals(nodeKind)) { //$NON-NLS-1$ //$NON-NLS-2$
+                parameters.forEach(node -> result.add(node.toNodeItem()));
+            }
+            if ("all".equals(nodeKind) || "calculated".equals(nodeKind)) { //$NON-NLS-1$ //$NON-NLS-2$
+                calculatedFields.forEach(node -> result.add(node.toNodeItem()));
+            }
+            return result;
+        }
+    }
+
+    private record ExternalDcsNode(
+            String elementName,
+            String name,
+            String dataPath,
+            String expression,
+            String query,
+            String dataSource,
+            String presentationExpression,
+            String autoFillAvailableFields,
+            String useQueryGroupIfPossible,
+            String availableAsField,
+            String valueListAllowed,
+            String denyIncompleteValues,
+            String useRestriction,
+            String xsiType
+    ) {
+        private DcsNodeItem toNodeItem() {
+            return switch (elementName) {
+                case "dataSets" -> new DcsNodeItem("dataset", name, //$NON-NLS-1$ //$NON-NLS-2$
+                        (xsiType.isBlank() ? "DataCompositionSchemaDataSetQuery" : xsiType) //$NON-NLS-1$
+                                + " query=" + query); //$NON-NLS-1$
+                case "parameters" -> new DcsNodeItem("parameter", name, "expression=" + expression); //$NON-NLS-1$ //$NON-NLS-2$ //$NON-NLS-3$
+                case "calculatedFields" -> new DcsNodeItem("calculated", dataPath, "expression=" + expression); //$NON-NLS-1$ //$NON-NLS-2$ //$NON-NLS-3$
+                default -> new DcsNodeItem(elementName, name, ""); //$NON-NLS-1$
+            };
+        }
+    }
+
+    private enum NodeKind {
+        DATASET,
+        PARAMETER,
+        CALCULATED
     }
 
     private record OwnerTemplates(List<Template> templates) {
